@@ -20,7 +20,9 @@ export(readArray)
 export(readDelayedArray)
 export(readSparseMatrix)
 export(recycleHdf5Files)
+export(registerReloadDelayedObjectFunction)
 export(reloadDelayedObject)
+export(reloadDelayedObjectFunctionRegistry)
 export(storeDelayedObject)
 export(writeSparseMatrix)
 exportClasses(AmalgamatedArray)
